--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
             ]
         },
         "sdkVersion": "3",
+        "targetPlatforms": [
+            "aplite",
+            "basalt",
+            "chalk"
+        ],
         "uuid": "4c030c1b-1ad4-49b7-b3fd-42e9e784c942",
         "watchapp": {
-            "watchface": false
+            "watchface": true
         }
     },
     "version": "1.0.0"
